# linumpy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  nf-test.config  pyproject.toml  requirements.txt  setup.py  singularity_linumpy.def
.github/workflows/: docker-image.yml  docker-publish.yml  nextflow-ci.yml  pr-size-check.yml  publish.yaml  python-app.yml
container/: Dockerfile
data/: phantom2d_circle.tif
docs/: AI_DOCUMENTATION_INDEX.md  ATTENUATION_METHODS.md  CONTRIBUTING.md  GPU_ACCELERATION.md  LIBRARY_MODULES.md  MOSAIC_GRID_FORMAT.md  Makefile  N4_GPU.md  NEXTFLOW_WORKFLOWS.md  PIPELINE_OVERVIEW.md  PIPELINE_PERFORMANCE_ANALYSIS.md  RECONSTRUCTION_DIAGNOSTICS.md  RECONSTRUCTION_TUNING.md  RECONSTRUCTION_TUNING_QUICKREF.md  RECONST_2_5D_WORKFLOW.md  SCRIPTS_REFERENCE.md  SHIFTS_FILE_FORMAT.md  SLICE_CONFIG_FEATURE.md  SLICE_INTERPOLATION_FEATURE.md  SUBJECT_TUNING.md  api.rst  conf.py  formats.rst  getting_started.rst  index.rst  n4_gpu_benchmark.json  pipelines.rst  reconstruction.md  reference.rst  requirements.txt  scripts.rst  usage.rst  workflow_reconstruction_2-5d.html
docs/scripts/: linum_aip.rst
linumpy/: __init__.py  _thread_config.py  conversion.py  reconstruction.py  registration.py  segmentation.py  utils_images.py  version.py
linumpy/cli/: __init__.py  args.py
linumpy/config/: __init__.py  threads.py
linumpy/destripe/: general_stripe_remover.py
linumpy/diagnostics/: __init__.py  acquisition_rotation.py  pipeline.py  pipeline_report.py  suggest_params.py
linumpy/feature/: kernel.py  orientation.py  structure_tensor.py
linumpy/filters/: __init__.py  _riesz.py  _steerable.py
linumpy/geometry/: __init__.py  crop.py  galvo.py  interface.py  resample.py  resampling.py
linumpy/gpu/: __init__.py  array_ops.py  bias_field.py  bspline.py  corrections.py  cuda_env.py  fft_ops.py  image_quality.py  interface.py  interpolation.py  kvikio_zarr.py  morphology.py  n4.py  normalization.py  nvcomp_zstd.py  registration.py  zarr_io.py
linumpy/imaging/: __init__.py  orientation.py  overlay.py  transform.py  visualization.py
linumpy/intensity/: __init__.py  artifact.py  attenuation.py  bias_field.py  convert.py  normalization.py  normalize.py  psf_model.py  sweep.py  vignette.py
linumpy/io/: __init__.py  allen.py  data_io.py  nifti.py  npz.py  slice_config.py  test_data.py  thorlabs.py  zarr.py
linumpy/metrics/: __init__.py  aggregate.py  collectors.py  core.py  image_quality.py
linumpy/microscope/: __init__.py  oct.py
linumpy/mosaic/: __init__.py  discovery.py  grid.py  interpolation.py  motor.py  overlap.py  quick_stitch.py  stacking.py
linumpy/postproc/: brainMask.py  filters.py
linumpy/preproc/: __init__.py  fixZ.py  icorr.py  normalization.py  orientation.py  resampling.py  xyzcorr.py
linumpy/psf/: __init__.py  extract.py  psf_estimator.py  synthetic.py
linumpy/reference/: __init__.py  allen.py
linumpy/registration/: __init__.py  manual.py  phase_correlation.py  refinement.py  sitk.py  transforms.py
linumpy/segmentation/: __init__.py  brain.py
linumpy/shifts/: __init__.py  utils.py
linumpy/stack_alignment/: __init__.py  filter.py  io.py  motor_stack.py  units.py
linumpy/stitching/: FileUtils.py  __init__.py  interpolation.py  manual_registration.py  mosaic_grid.py  motor.py  phase_correlation.py  registration.py  shift_oct.py  stacking.py  stitch_oct.py  stitch_utils.py  topology.py
linumpy/tests/: test_attenuation.py  test_bias_field.py  test_bias_field_backend.py  test_diagnostics_acquisition_rotation.py  test_diagnostics_pipeline.py  test_diagnostics_pipeline_report.py  test_diagnostics_suggest_params.py  test_geometry_galvo_zarr.py  test_geometry_resampling.py  test_geometry_xyzcorr.py  test_gpu_bspline.py  test_gpu_n4.py  test_imaging_orientation.py  test_imaging_orientation_ras.py  test_imaging_visualization.py  test_intensity_normalization.py  test_intensity_sweep.py  test_io_allen.py  test_io_slice_config.py  test_io_zarr.py  test_microscope_oct.py  test_mosaic_grid_overlap.py  test_mosaic_interpolation.py  test_mosaic_motor.py  test_mosaic_stacking.py  test_n4_gpu_equivalency.py  (+15 more)
notebooks/: example_extract_ROI.ipynb  example_merge_channels.ipynb  example_steerable_energy_2d.ipynb
old/: .gitlab-ci.yml
scripts/: __init__.py  _deprecation.py  create_figures_pw2024.py  dev_convert_zarr.py  dev_manual_align.py  dev_napari_zarr.py  dev_reconstruct_oct_bouma.py  dev_remove_empty_tiles.py  dev_reorient_to_ras.py  dev_segment_brain.py  dev_stack_with_xyshifts.py  dev_templating_v2.py  linum_aggregate_dilation_analysis.py  linum_aip.py  linum_aip_gpu.py  linum_aip_png.py  linum_align_mosaics_3d_from_shifts.py  linum_align_to_ras.py  linum_analyze_acquisition_rotation.py  linum_analyze_registration_transforms.py  linum_analyze_shifts.py  linum_analyze_stitch_affine.py  linum_analyze_tile_dilation.py  linum_apply_segment_corrections.py  linum_apply_segment_corrections_gpu.py  linum_apply_slices_transforms.py  linum_assess_slice_quality.py  linum_assess_slice_quality_gpu.py  linum_auto_exclude_slices.py  linum_axial_psf_correction.py  linum_axis_XYZ_to_ZYX.py  linum_axis_xyz_to_zyx.py  linum_basic_preview.py  linum_benchmark_gpu.py  linum_benchmark_kvikio_zarr.py  linum_clean_raw_data.py  linum_clip_percentile.py  linum_compare_stitching.py  linum_compensate_attenuation.py  linum_compensate_attenuation_inplace.py  (+107 more)
shell_scripts/: cmd_2.5d_reconstruction_docker.sh  cmd_convert.sh  cmd_mosaic.sh  cmd_post_mosaic.sh  cmd_soct_reconstruction_2-5d.sh  fix_jax_cuda_plugin.sh
tests/: test_linum_extract_orientation.py  test_linum_generate_odf.py
workflows/: process_bin_to_nifti.nf  process_bin_to_nifty.nf  process_mosaic.nf  process_oct.nf  process_reconstruction_post_mosaic.nf  reconstruction.config  reconstruction_2.5d_beluga.config  workflow_2.5d_preprocessing.nf  workflow_reconstruction_2.5d.nf  workflow_soct_3d_slice_reconstruction.config  workflow_soct_3d_slice_reconstruction.nf  workflow_spsoct_preprocess.nf
(+221 files in other folders)
