[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linumpy"
version = "0.1.1"
description = "linumpy: microscopy tools and utilities"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
authors = [
    { name = "The LINUM developers" },
]
maintainers = [
    { name = "Joël Lefebvre", email = "lefebvre.joel@uqam.ca" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "nibabel",
    "dipy",
    "dask>=2024.10.0",
    "SimpleITK",
    "tqdm",
    "pqdm",
    "hyperactive",
    "basicpy",
    "zarr>=3.2.0",
    "ome-zarr>=0.16.0",
    "napari",
    "napari-ome-zarr",
    "pynrrd",
    "numcodecs",
    "threadpoolctl",
]

[project.urls]
Homepage = "https://github.com/linum-uqam/linumpy"
Repository = "https://github.com/linum-uqam/linumpy"

[project.optional-dependencies]
gpu = [
    "cupy-cuda13x>=13.0.0",
]
gpu-cuda12 = [
    "cupy-cuda12x>=12.0.0",
]
gds = [
    "kvikio-cu13",
    "nvidia-nvcomp-cu13",
]
gds-cuda12 = [
    "kvikio-cu12",
    "nvidia-nvcomp-cu12",
]
docs = [
    "sphinx>=9.1",
    "pydata-sphinx-theme>=0.17",
    "sphinx-autoapi>=3.8",
    "sphinx-argparse>=0.5",
    "sphinx-design>=0.7",
    "sphinxcontrib-mermaid>=1.0",
    "myst-parser>=5.0",
    "linkify-it-py>=2.1",
    "sphinx-copybutton>=0.5",
    "sphinx-notfound-page>=1.0",
    "sphinx-sitemap>=2.6",
    "sphinxext-opengraph>=0.9",
]

[project.scripts]
"linum_aggregate_dilation_analysis.py" = "scripts.diagnostics.linum_aggregate_dilation_analysis:main"
"linum_aip_png.py" = "scripts.linum_aip_png:main"
"linum_aip.py" = "scripts.linum_aip:main"
"linum_align_mosaics_3d_from_shifts.py" = "scripts.linum_align_mosaics_3d_from_shifts:main"
"linum_align_to_ras.py" = "scripts.linum_align_to_ras:main"
"linum_analyze_acquisition_rotation.py" = "scripts.diagnostics.linum_analyze_acquisition_rotation:main"
"linum_analyze_registration_transforms.py" = "scripts.diagnostics.linum_analyze_registration_transforms:main"
"linum_analyze_shifts.py" = "scripts.linum_analyze_shifts:main"
"linum_analyze_stitch_affine.py" = "scripts.diagnostics.linum_analyze_stitch_affine:main"
"linum_analyze_tile_dilation.py" = "scripts.diagnostics.linum_analyze_tile_dilation:main"
"linum_apply_slices_transforms.py" = "scripts.linum_apply_slices_transforms:main"
"linum_assess_slice_quality.py" = "scripts.linum_assess_slice_quality:main"
"linum_auto_exclude_slices.py" = "scripts.linum_auto_exclude_slices:main"
"linum_axis_xyz_to_zyx.py" = "scripts.linum_axis_xyz_to_zyx:main"
"linum_benchmark_gpu.py" = "scripts.diagnostics.linum_benchmark_gpu:main"
"linum_clean_raw_data.py" = "scripts.linum_clean_raw_data:main"
"linum_clip_percentile.py" = "scripts.linum_clip_percentile:main"
"linum_compare_stitching.py" = "scripts.diagnostics.linum_compare_stitching:main"
"linum_compensate_attenuation.py" = "scripts.linum_compensate_attenuation:main"
"linum_compensate_illumination.py" = "scripts.linum_compensate_illumination:main"
"linum_compensate_psf_from_model.py" = "scripts.linum_compensate_psf_from_model:main"
"linum_compensate_psf_model_free.py" = "scripts.linum_compensate_psf_model_free:main"
"linum_compute_attenuation_bias_field.py" = "scripts.linum_compute_attenuation_bias_field:main"
"linum_compute_attenuation.py" = "scripts.linum_compute_attenuation:main"
"linum_convert_bin_to_nii.py" = "scripts.linum_convert_bin_to_nii:main"
"linum_convert_nifti_to_nrrd.py" = "scripts.linum_convert_nifti_to_nrrd:main"
"linum_convert_nifti_to_zarr.py" = "scripts.linum_convert_nifti_to_zarr:main"
"linum_convert_omezarr_to_nifti.py" = "scripts.linum_convert_omezarr_to_nifti:main"
"linum_convert_tiff_to_nifti.py" = "scripts.linum_convert_tiff_to_nifti:main"
"linum_convert_tiff_to_omezarr.py" = "scripts.linum_convert_tiff_to_omezarr:main"
"linum_convert_zarr_to_omezarr.py" = "scripts.linum_convert_zarr_to_omezarr:main"
"linum_create_all_mosaic_grids_2d.py" = "scripts.linum_create_all_mosaic_grids_2d:main"
"linum_create_mosaic_grid_2d.py" = "scripts.linum_create_mosaic_grid_2d:main"
"linum_create_mosaic_grid_3d.py" = "scripts.linum_create_mosaic_grid_3d:main"
"linum_crop_3d_mosaic_below_interface.py" = "scripts.linum_crop_3d_mosaic_below_interface:main"
"linum_crop_tiles.py" = "scripts.linum_crop_tiles:main"
"linum_detect_focal_curvature.py" = "scripts.linum_detect_focal_curvature:main"
"linum_detect_rehoming.py" = "scripts.linum_detect_rehoming:main"
"linum_diagnose_pipeline.py" = "scripts.diagnostics.linum_diagnose_pipeline:main"
"linum_diagnose_reconstruction.py" = "scripts.diagnostics.linum_diagnose_reconstruction:main"
"linum_download_allen.py" = "scripts.linum_download_allen:main"
"linum_estimate_global_transform.py" = "scripts.linum_estimate_global_transform:main"
"linum_estimate_illumination.py" = "scripts.linum_estimate_illumination:main"
"linum_estimate_slices_transforms_gui.py" = "scripts.linum_estimate_slices_transforms_gui:main"
"linum_estimate_transform.py" = "scripts.linum_estimate_transform:main"
"linum_estimate_xy_shift_from_metadata.py" = "scripts.linum_estimate_xy_shift_from_metadata:main"
"linum_export_manual_align.py" = "scripts.linum_export_manual_align:main"
"linum_extract_pyramid_levels.py" = "scripts.linum_extract_pyramid_levels:main"
"linum_fix_galvo_shift_zarr.py" = "scripts.linum_fix_galvo_shift_zarr:main"
"linum_fix_illumination_3d.py" = "scripts.linum_fix_illumination_3d:main"
"linum_generate_mosaic_aips.py" = "scripts.linum_generate_mosaic_aips:main"
"linum_generate_pipeline_report.py" = "scripts.linum_generate_pipeline_report:main"
"linum_generate_slice_config.py" = "scripts.linum_generate_slice_config:main"
"linum_gpu_info.py" = "scripts.linum_gpu_info:main"
"linum_intensity_normalization.py" = "scripts.linum_intensity_normalization:main"
"linum_interpolate_missing_slice.py" = "scripts.linum_interpolate_missing_slice:main"
"linum_merge_slices_into_folders.py" = "scripts.linum_merge_slices_into_folders:main"
"linum_normalize_intensities_per_slice.py" = "scripts.linum_normalize_intensities_per_slice:main"
"linum_correct_bias_field.py" = "scripts.linum_correct_bias_field:main"
"linum_refine_manual_transforms.py" = "scripts.linum_refine_manual_transforms:main"
"linum_register_pairwise.py" = "scripts.linum_register_pairwise:main"
"linum_reorient_nifti_to_ras.py" = "scripts.linum_reorient_nifti_to_ras:main"
"linum_resample_mosaic_grid.py" = "scripts.linum_resample_mosaic_grid:main"
"linum_resample_nifti.py" = "scripts.linum_resample_nifti:main"
"linum_screenshot_omezarr_annotated.py" = "scripts.linum_screenshot_omezarr_annotated:main"
"linum_screenshot_omezarr.py" = "scripts.linum_screenshot_omezarr:main"
"linum_segment_brain_3d.py" = "scripts.linum_segment_brain_3d:main"
"linum_stack_motor_only.py" = "scripts.diagnostics.linum_stack_motor_only:main"
"linum_stack_slices_3d.py" = "scripts.linum_stack_slices_3d:main"
"linum_stack_slices_motor.py" = "scripts.linum_stack_slices_motor:main"
"linum_stack_slices_2d.py" = "scripts.linum_stack_slices_2d:main"
"linum_stitch_2d.py" = "scripts.linum_stitch_2d:main"
"linum_stitch_3d_refined.py" = "scripts.linum_stitch_3d_refined:main"
"linum_stitch_3d.py" = "scripts.linum_stitch_3d:main"
"linum_stitch_motor_only.py" = "scripts.diagnostics.linum_stitch_motor_only:main"
"linum_suggest_params.py" = "scripts.diagnostics.linum_suggest_params:main"
"linum_view_oct_raw_tile.py" = "scripts.linum_view_oct_raw_tile:main"
"linum_view_omezarr.py" = "scripts.linum_view_omezarr:main"
"linum_view_zarr.py" = "scripts.linum_view_zarr:main"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.27",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-console-scripts",
    "pre-commit>=4.5.1",
    "pandas-stubs~=2.3.3",
    "scipy-stubs>=1.17.1.4",
    "networkx-stubs>=0.0.1",
]

[tool.uv]
# basicpy 2.0.0 (latest) pins scipy<1.13, which transitively forces numpy<2.
# Override that ceiling so we can use modern numpy/scipy. basicpy still works
# at runtime against newer scipy in our usage.
override-dependencies = [
    "scipy",
    "numpy",
]

[tool.pytest.ini_options]
filterwarnings = [
    # Third-party: SWIG/SimpleITK native type registration (SwigPyPacked, SwigPyObject, swigvarlink)
    "ignore:builtin type [Ss]wig.*has no __module__ attribute:DeprecationWarning",
    # Third-party: nrrd library uses deprecated datetime.utcnow()
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:nrrd",
    # Expected with test data: OCT files have no extra a-lines for shift estimation
    "ignore:Cannot estimate the shift correction:UserWarning",
    # Intentional deprecation of linum_stack_slices_3d.py
    "ignore:linum_stack_slices_3d.py is deprecated:DeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["linumpy*", "scripts*"]

# --- Ruff ---
[tool.ruff]
target-version = "py314"
line-length = 127
fix = true
include = ["linumpy*", "scripts*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF", "SIM", "C4", "PIE", "PTH", 
            "N", "PERF", "FLY", "G", "D", "ANN", "ARG", "ERA", "FURB"]
# N813: SimpleITK as sitk is the universal Python convention — excluded globally.
# D212/D213 conflict: numpy convention picks D213 (summary on second line of multi-line docstrings).
# ANN401: Any is legitimately unavoidable in a few callback/override signatures.
# Note: flake8-type-checking (TCH/TC) is intentionally not selected — under
# PEP 649 (Python 3.14 default), annotations are lazily evaluated, so gating
# typing-only imports inside TYPE_CHECKING blocks no longer reduces import cost.
ignore = ["N813", "ANN401"]
extend-select = ["D417"]
# Scientific codebase: Greek letters and the info-icon glyph are intentional;
# ASCII confusables (× → x, – → -, — → --) are normalised in source.
allowed-confusables = ["σ", "ℹ"]

[tool.ruff.lint.pydocstyle]
# numpy-style docstrings across the whole codebase.
# This disables D203, D212, D215 (conflicting numpy-incompatible rules).
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# These scripts must import linumpy.config.threads (or preload CUDA libs)
# before any other imports, so E402 is unavoidable.
"scripts/linum_fix_illumination_3d.py" = ["E402"]
"scripts/linum_normalize_intensities_per_slice.py" = ["E402"]
"scripts/linum_correct_bias_field.py" = ["E402"]
# Star imports are intentional re-exports in __init__.py
"linumpy/io/__init__.py" = ["F403"]
# py.typed is a PEP 561 marker file — not a module requiring a docstring
"linumpy/py.typed" = ["D100"]
# Scientific code uses uppercase variable names (I, N, C, A, T, Q, etc.)
# by mathematical convention; renaming them would reduce legibility.
"linumpy/intensity/*.py" = ["N803", "N806", "N802", "E741", "E501"]
"linumpy/geometry/*.py" = ["N803", "N806", "E741", "E501"]
"linumpy/mosaic/grid.py" = ["N803", "N806", "E741"]
"linumpy/registration/*.py" = ["N803", "N806", "E501"]
"linumpy/gpu/*.py" = ["N803", "N806", "E741"]
"linumpy/io/zarr.py" = ["E501"]
# Diagnostic shell snippets have intentionally long template strings;
# CUDA library detection uses os.path for system-level path traversal
"scripts/diagnostics/linum_diagnose_pipeline.py" = ["E501", "PTH"]
"scripts/diagnostics/linum_benchmark_n4_gpu.py" = ["ANN", "E501"]
"scripts/diagnostics/linum_n4_gpu_visual_compare.py" = ["ANN", "D103", "E501"]
"scripts/linum_align_mosaics_3d_from_shifts.py" = ["E501"]
"scripts/linum_create_all_mosaic_grids_2d.py" = ["E501"]
# Test files: type annotations, docstrings, unused-arg checks, naming conventions and commented-out code are not required in tests.
"linumpy/tests/**" = ["ANN", "D", "ARG", "N", "ERA", "TC"]
"scripts/tests/**" = ["ANN", "D", "ARG", "N", "ERA", "TC"]

[tool.ruff.lint.isort]
# linumpy.config.threads sets OMP_NUM_THREADS & friends and MUST be imported
# before numpy/scipy/SimpleITK or the env vars have no effect.
known-first-party = ["linumpy"]
sections.thread-config = ["linumpy.config.threads"]
section-order = ["thread-config", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use default (black-compatible) formatting

# --- ty ---
[tool.ty.src]
include = ["linumpy", "scripts"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
# possibly-unresolved-reference defaults to "warn" in ty; raise it to "error"
# so that variables only assigned inside conditional branches are caught.
possibly-unresolved-reference = "error"

[tool.ty.analysis]
# Optional GPU deps — not installed in the standard dev env.
# Using replace-imports-with-any so downstream attribute/subscript access
# on the imported module is typed as Any rather than causing cascading errors.
replace-imports-with-any = ["cupy.**", "cupyx.**", "numba.**", "kvikio.**", "nvidia.**"]

# --- ty overrides ---

# Relax rules in test files
[[tool.ty.overrides]]
include = ["linumpy/tests/**", "scripts/tests/**", "**/test_*.py", "**/conftest.py"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"

# GPU modules use conditional imports and duck-typed array backends;
# many attribute/subscript errors are false positives even with cupy→Any.
[[tool.ty.overrides]]
include = ["linumpy/gpu/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
not-subscriptable = "warn"
invalid-assignment = "ignore"
call-non-callable = "ignore"
